# MyCpackDmg

./: CMakeLists.txt  MyCPackApp.cpp  README.md
DiskImage/: DS_Store  VolumeIcon.icns  adjust_dmg.scpt
